# autoDos

./: BUILD.md  CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  build-windows-from-linux.sh  build-windows.ps1  build.ps1  clean.ps1  clean.sh
linux/: CMakeLists.txt  README.md  README_LINUX.md
linux/src/: autodos.cpp  main_gui.cpp  main_linux.cpp
macos/: ._README.md  CMakeLists.txt  README.md  autodos.cpp  autodos.h  build-dmg.sh
macos/cli/: main.cpp
macos/gui/: main.cpp
macos/shared/: platform.cpp  platform.h
src/: autodos.cpp  games.json  main.cpp
